@@ -24,6 +24,7 @@ Engine changes
 * Fix custom_entity:get_modified_ground() returning nothing.
 * Fix custom_entity:on_ground_below_changed() not called (#738).
 * Fix creating an entity with the same name as another one just removed (#795).
+* Fix parallax scrolling for dynamic tiles (#816).
 
 Lua API changes
 ---------------
